# robotics2019_project_LifeRobot

./: README.md
catkin_indigo_ws/: rosserial.ino  target_pose.txt
catkin_indigo_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_indigo_ws/devel/lib/moveit_tutorials/: attached_body_tutorial  collision_contact_tutorial  fetch_add_collision  fetch_func_test  fetch_test  fetch_test2  interactivity_tutorial  kinematic_model_tutorial  motion_planning_api_tutorial  move_group_interface_tutorial  pick_place_tutorial  planning_pipeline_tutorial  planning_scene_ros_api_tutorial  planning_scene_tutorial  ros_api_tutorial  state_display_tutorial
catkin_indigo_ws/devel/lib/pkgconfig/: life_robot_moveit.pc  moveit_tutorials.pc
catkin_indigo_ws/devel/share/life_robot_moveit/cmake/: life_robot_moveitConfig.cmake
catkin_indigo_ws/devel/share/moveit_tutorials/cmake/: moveit_tutorialsConfig.cmake
catkin_indigo_ws/src/apriltags2_ros/apriltags2_ros/config/: tags.yaml
catkin_indigo_ws/src/apriltags2_ros/apriltags2_ros/launch/: continuous_detection.launch
catkin_indigo_ws/src/life_robot_moveit/: CMakeLists.txt  CMakeLists.txt~
catkin_indigo_ws/src/life_robot_moveit/config/: grasp_tube.yaml  settings.yaml  tags.yaml
catkin_indigo_ws/src/life_robot_moveit/launch/: continuous_detection.launch  start.launch  start.launch~  test.launch
catkin_indigo_ws/src/moveit_tutorials/doc/pr2_tutorials/planning/: CMakeLists.txt
catkin_indigo_ws/src/moveit_tutorials/doc/pr2_tutorials/planning/src/: fetch_add_collision.cpp  fetch_func_test.cpp  fetch_test.cpp
catkin_kinetic_ws/src/moveit_tutorials/: CMakeLists.txt
catkin_kinetic_ws/src/moveit_tutorials/doc/motion_planning_api/src/: motion_planning_api_tutorial.cpp
catkin_kinetic_ws/src/moveit_tutorials/doc/move_group_interface/: CMakeLists.txt
catkin_ws/src/moveit_tutorials/doc/move_group_interface/src/: move_group_test.cpp
doc/Proposal_latex/: proposal.tex  ref.bib
final_report/report_latex/: final.tex
